# flight-plugin/server.js
@@ -9,12 +9,15 @@ app.use(cors({ origin: "https://www.bing.com" }));
 app.get("/get-flights", (req, res) => {
     const departure_airport = req.query.departure;
     const destination_airport = req.query.destination;
-    const departure_time = req.query.date;
+    const date = req.query.date;
+    const dateRangeStart = req.query.dateRangeStart;
+    const dateRangeEnd = req.query.dateRangeEnd;
     const connections = parseInt(req.query.connections);
+    const flightClass = req.query.class;
   
     try {
-      const flights = getFlights(departure_airport, destination_airport, departure_time, connections);
-      res.send(flights);
+        const flights = getFlights(departure_airport, destination_airport, date, dateRangeStart, dateRangeEnd, connections, flightClass);
+        res.send(flights);
     } catch (e) {
       res.status(400).send({ error: e.message });
     }
